# ign_ros_control

./: README.md
ign_ros_control/: CHANGELOG.rst  CMakeLists.txt  ign_ros_control_plugin.xml  ign_ros_control_plugins.xml  package.xml
ign_ros_control/include/ign_ros_control/: ign_ros_control_plugin.hpp  ign_system.hpp  ign_system_interface.hpp
ign_ros_control/src/: ign_ros_control_plugin.cpp  ign_system.cpp
ign_ros_control_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
ign_ros_control_demos/launch/: cartpole.launch
ign_ros_control_demos/params/: joint_effort_controller.yaml  joint_position_controller.yaml  joint_state_publisher.yaml  joint_velocity_controller.yaml
ign_ros_control_demos/urdf/: cartpole.urdf.xacro
